# Shads-OBS-BG-Remover

./: LICENSE  README.md  gitignore
obs-bg-removal/: CMakeLists.txt  Deploy-BGRemoval.ps1  buildspec.json
obs-bg-removal/data/effects/: mask.effect
obs-bg-removal/installer/: Build-Installer.ps1  obs-bg-removal-setup.iss
obs-bg-removal/src/: bg-filter.cpp  plugin-main.c
